# citeguard

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.en.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements-optional.txt  server.json  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_or_research_task.yml  bug_report.yml  feature_request.yml
.github/workflows/: canary.yml  ci.yml  model-smoke.yml  publish.yml
citeguard/: __init__.py  __main__.py  cli.py  cli_input.py  errors.py  model_tools.py  runtime.py  runtime_config.py  runtime_health.py  skill_install.py  version.py
citeguard/api/: app.py  schemas.py
citeguard/audit/: __init__.py  provenance.py  report_builder.py  visualization.py
citeguard/benchmark/: __init__.py  baselines.py  experiments.py  support_calibration.py
citeguard/citation/: formatter.py  proposer.py
citeguard/mcp/: __init__.py  input.py  server.py
citeguard/orchestrator/: graph.py  states.py
citeguard/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  metadata_source_retriever.py  types.py
citeguard/verification/: __init__.py  audit.py  cache.py  eval.py  extract.py  models.py  parse.py  resolve.py  support.py  support_counterevidence.py  support_eval.py  support_eval_execution.py  support_eval_label_gate.py  support_eval_labels.py  support_eval_metrics.py  support_eval_review.py  support_pattern_registry.json  support_patterns.py  support_reporting.py  support_scoring.py  verify.py
citeguard/verifiers/: __init__.py  contradiction_verifier.py  existence_verifier.py  metadata_verifier.py  risk_fusion.py  support_backends.py  support_verifier.py  uncertainty_gate.py
citeguard/writer/: constrained_writer.py
configs/: experiment.yaml  model.yaml  retrieval.yaml  verifier.yaml
data/eval/: canary_golden.json  skill_trigger_eval.json  support_eval.json  support_eval_label_sidecar.json  verification_eval.json
docs/: agent_output_contract.md  architecture.md  benchmark_design.md  benchmark_todo.md  chinaxiv_spike.md  claude_code_quickstart.md  cli_reference.md  configuration.md  documentation_contract.md  error_analysis.md  error_codes.md  github_launch.md  improvement_proposal_2026-07.md  mcp_setup.md  proposal.md  public_api_migration.md  release_checklist.md  security_compliance.md  support_eval.md  support_labeling_guidelines.md  troubleshooting.md
docs/issues/: benchmark_phase1_issue_drafts.md  benchmark_phase1_issue_final.md  benchmark_phase1_issue_posting_pack.md  benchmark_phase1_issue_quickref.md  benchmark_phase1_project_board.md  benchmark_phase1_project_import.csv
docs/plans/: 2026-07-13-m1-trust-and-speed.md
docs/releases/: v0.1.0.md  v0.1.1.md
examples/: citations.json  citations.jsonl  claim_citations.json  claim_citations.jsonl  claim_citations_full_text.json  claim_citations_full_text_file.json  demo_corpus.json  lawful_full_text_excerpt.txt  references.md  support_calibration_examples.json
experiments/support_calibration/: quick_results.json
legacy/: README.md  benchmark_baselines.py  benchmark_dataset_builder.py
legacy/api/: __init__.py  app.py  schemas.py
legacy/orchestrator/: __init__.py  graph.py  policies.py  states.py
legacy/planner/: claim_decomposer.py
legacy/scripts/: _bootstrap.py  evaluate.py  run_agent.py
legacy/tests/: test_writer.py
legacy/writer/: __init__.py  abstention_controller.py  constrained_writer.py
scripts/: _bootstrap.py  automated_release_review.py  build_corpus.py  build_index.py  calibrate_support.py  canary_live.py  compare_support_baselines.py  demo_verify.py  eval_skill_trigger.py  eval_support.py  eval_verification.py  evaluate.py  harvest_openalex.py  prepare_support_label_sidecar.py  release_package_gate.py  run_agent.py  smoke_mcp.py  smoke_package.py  smoke_published_package.py  warmup_support_models.py
skills/citeguard-maintain/: SKILL.md
skills/citeguard-verify/: SKILL.md
src/: __init__.py  cli.py  errors.py  runtime.py
src/api/: __init__.py  app.py  schemas.py
src/audit/: __init__.py  provenance.py  report_builder.py  visualization.py
src/benchmark/: __init__.py  baselines.py  dataset_builder.py  experiments.py  metrics.py  support_calibration.py
src/citation/: __init__.py  formatter.py  normalizer.py  proposer.py
src/graph/: __init__.py  cceg.py  graph_store.py
src/mcp_server/: __init__.py  server.py
src/orchestrator/: __init__.py  graph.py  policies.py  states.py
src/planner/: __init__.py  claim_decomposer.py  outline_planner.py
src/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  metadata_source_retriever.py  types.py
src/verification/: __init__.py  audit.py  cache.py  eval.py  extract.py  models.py  parse.py  resolve.py  support.py  support_eval.py  verify.py
src/verifiers/: __init__.py  contradiction_verifier.py  existence_verifier.py  metadata_verifier.py  risk_fusion.py  support_backends.py  (+2 more)
tests/: __init__.py  test_automated_release_review.py  test_canary_golden.py  test_chinese_normalization.py  test_chinese_verification.py  test_cli.py  test_experiment_artifacts.py  test_http_client.py  test_http_diagnostics_isolation.py  test_identifier_authority.py  test_mcp_server.py  test_mcp_stdio_smoke.py  test_metrics.py  test_multi_source_concurrency.py  test_package_smoke.py  test_polluted_record_defense.py  test_public_package.py  test_published_package_smoke.py  test_rank_normalization.py  test_release_metadata.py  test_retrieval.py  test_runtime.py  test_scholarly_sources.py  test_skill_contract.py  test_skill_install.py  test_skill_trigger_eval.py  test_support_calibration.py  test_support_eval.py  test_support_patterns.py  test_verification_audit.py  test_verification_cache.py  test_verification_eval.py  test_verification_extract.py  test_verification_integration.py  test_verification_models.py  test_verification_parse.py  test_verification_resolve.py  test_verification_support.py  test_verification_support_resolve.py  test_verification_verify.py  (+2 more)
(+39 files in other folders)
