[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citeguard"
version = "0.1.0"
description = "A falsification-first toolkit for trustworthy citation verification."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Wenyao Xu" }
]
keywords = [
  "scientific-writing",
  "citation-verification",
  "research-agents",
  "hallucination-mitigation",
  "evidence-attribution",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/xiaweiyi713/citeguard"
Repository = "https://github.com/xiaweiyi713/citeguard"
Issues = "https://github.com/xiaweiyi713/citeguard/issues"
Changelog = "https://github.com/xiaweiyi713/citeguard/blob/main/CHANGELOG.md"
Documentation = "https://github.com/xiaweiyi713/citeguard#readme"

[project.optional-dependencies]
api = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
]
models = [
  "sentence-transformers==3.1.1",
  "transformers==4.45.2",
  "torch==2.3.1",
  "safetensors==0.7.0",
]
mcp = [
  "mcp>=1.2",
]
pdf = [
  "pypdf>=4,<6",
]

[project.scripts]
citeguard = "citeguard.cli:main"
citeguard-mcp = "citeguard.mcp.server:main"

[tool.setuptools.packages.find]
include = ["citeguard", "citeguard.*", "src", "src.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
citeguard = ["py.typed"]
