[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citationguard"
version = "0.1.2"
description = "A skeptical citation auditor for agent writing workflows."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Wenyao Xu" }
]
keywords = [
  "citation-verification",
  "skeptical-citation-auditor",
  "agent-tools",
  "mcp",
  "scientific-writing",
  "claim-support",
  "research-integrity",
  "hallucination-mitigation",
  "evidence-attribution",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
dependencies = [
  # The published package exposes citeguard-mcp as a primary entry point and
  # MCP Registry clients install the base distribution rather than an extra.
  # Keep Python 3.9 usable for the library while installing the SDK wherever
  # its supported Python runtime is available.
  "mcp>=1.2; python_version >= '3.10'",
]

[project.urls]
Homepage = "https://github.com/xiaweiyi713/citeguard"
Repository = "https://github.com/xiaweiyi713/citeguard"
Issues = "https://github.com/xiaweiyi713/citeguard/issues"
Changelog = "https://github.com/xiaweiyi713/citeguard/blob/main/CHANGELOG.md"
Documentation = "https://github.com/xiaweiyi713/citeguard#readme"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "ruff>=0.9,<1",
  "twine>=5,<7",
  "wheel>=0.44,<1",
]
models = [
  "sentence-transformers>=3.1,<6.0",
  "transformers>=4.45,<5.0",
  "torch>=2.3,<3.0",
  "safetensors>=0.4",
]
# Compatibility alias: citationguard[mcp] remains accepted, while MCP is now
# installed by the base distribution on Python 3.10+.
mcp = []
pdf = [
  "pypdf>=4,<6",
]

[project.scripts]
citeguard = "citeguard.cli:main"
citeguard-mcp = "citeguard.mcp.server:main"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 120
extend-exclude = ["build/"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
# scripts/ bootstrap sys.path before importing citeguard from a source checkout.
"scripts/*.py" = ["E402"]
"tests/*.py" = ["E402"]
"legacy/scripts/*.py" = ["E402"]

[tool.setuptools.packages.find]
include = ["citeguard", "citeguard.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
citeguard = ["py.typed", "verification/*.json"]

[tool.setuptools.data-files]
"share/citationguard/skills/citeguard-verify" = ["skills/citeguard-verify/SKILL.md"]
"share/citationguard/skills/citeguard-verify/agents" = ["skills/citeguard-verify/agents/openai.yaml"]
"share/citationguard/skills/citeguard-verify/references" = ["skills/citeguard-verify/references/*.md"]
